# caelestia

./: .envrc  .gitignore  .gitmodules  .qmllss.ini  CMakeLists.txt  PKGBUILD  caelestia-cli-structure.txt  caelestia-structure.txt  run.sh
assets/: realtime-beat-detector.py.dis
cli/: README.md  pyproject.toml
cli/completions/: caelestia.fish
cli/src/caelestia/: __init__.py  command.py  parser.py
cli/src/caelestia/data/schemes/caelestia/default/: dark.txt  light.txt
cli/src/caelestia/data/schemes/dracula/medium/: dark.txt
cli/src/caelestia/data/schemes/everblush/medium/: dark.txt
cli/src/caelestia/data/schemes/everforest/hard/: dark.txt
cli/src/caelestia/data/schemes/everforest/medium/: dark.txt  light.txt
cli/src/caelestia/data/schemes/everforest/soft/: dark.txt
cli/src/caelestia/data/schemes/nord/medium/: dark.txt
cli/src/caelestia/data/schemes/solarized/medium/: dark.txt
cli/src/caelestia/data/schemes/tokyonight/medium/: dark.txt
cli/src/caelestia/data/templates/: btop.theme  cava.conf  discord.scss  fuzzel.ini  gtk.css  htop.theme  nvtop.colors  qtct.conf  qtdark.colors  qtlight.colors  spicetify-dark.ini  spicetify-light.ini  thunar.css  warp.yaml  zed.json
cli/src/caelestia/subcommands/: clipboard.py  emoji.py  record.py  resizer.py  scheme.py  screenshot.py  shell.py  toggle.py  wallpaper.py
cli/src/caelestia/utils/: close_guard.py  colourfulness.py  hypr.py  logging.py  notify.py  paths.py  runner.py  scheme.py  theme.py  version.py  wallpaper.py
cli/src/caelestia/utils/material/: __init__.py  generator.py
modules/bar/: Bar.qml
plugin/src/Caelestia/Internal/: idleinhibitor.cpp  idlemonitor.cpp  idlemonitor.hpp
scripts/: build-shell  caelestia-shellctl  install-cli  install-shell  lint-shell  lint-shell.fish  restart-shell
shell/: .envrc  CMakeLists.txt  README.md  build.sh
shell/cmake/: cmake_uninstall.cmake.in
shell/components/controls/: FilledSlider.qml
shell/config/: BarConfig.qml  Config.qml  HiddenApps.qml  UtilitiesConfig.qml
shell/extras/: CMakeLists.txt  version.cpp
shell/modules/: IdleMonitors.qml
shell/modules/areapicker/: Picker.qml
shell/modules/background/: Background.qml
shell/modules/bar/: Bar.qml  BarWrapper.qml
shell/modules/bar/components/: ActiveWindow.qml  Clock.qml  GithubActivity.qml  GithubStore.qml  Tray.qml
shell/modules/bar/components/workspaces/: SpecialWorkspaces.qml  Workspaces.qml
shell/modules/bar/popouts/: Content.qml  Github.qml  Wrapper.qml
shell/modules/dashboard/: Media.qml  Performance.qml
shell/modules/dashboard/dash/: Media.qml
shell/modules/drawers/: Border.qml  Drawers.qml
shell/modules/launcher/: Wrapper.qml
shell/modules/launcher/items/: AppItem.qml
shell/modules/launcher/services/: Schemes.qml
shell/modules/lock/: Fetch.qml  Media.qml  Pam.qml
shell/modules/osd/: Content.qml  Wrapper.qml
shell/modules/sidebar/: NotifDock.qml  NotifGroup.qml
shell/modules/utilities/cards/: Toggles.qml
shell/modules/windowinfo/: Buttons.qml
shell/plugin/: CMakeLists.txt
shell/plugin/src/Caelestia/: CMakeLists.txt  appdb.cpp  appdb.hpp  imageanalyser.cpp  toaster.hpp
shell/plugin/src/Caelestia/Internal/: CMakeLists.txt  hyprdevices.hpp  idleinhibitor.hpp
shell/services/: Brightness.qml  HyprSunset.qml  IdleInhibitor.qml  Notifs.qml  Players.qml  TrayFilter.qml  Visibilities.qml  Wallpapers.qml  notif_listen.py
shell/utils/: FileUtil.qml  Icons.qml  ProcessUtil.qml  SysInfo.qml
src/caelestia/subcommands/: emoji.py  scheme.py  screenshot.py
src/caelestia/utils/: colour.py  hypr.py  notify.py
src/caelestia/utils/material/: score.py
systemd/: caelestia.service
